# anland-repo-src

./: .gitignore  README.md
hyprland/: wayland.sh
hyprland/example/: hyprland.desktop
hyprland/meta/: hl.meta.lua
hyprland/protocols/: alpha-modifier-v1.cpp  alpha-modifier-v1.hpp  color-management-v1.cpp  color-management-v1.hpp  commit-timing-v1.cpp  commit-timing-v1.hpp  content-type-v1.cpp  content-type-v1.hpp  cursor-shape-v1.cpp  cursor-shape-v1.hpp  drm-lease-v1.cpp  drm-lease-v1.hpp  ext-background-effect-v1.cpp  ext-background-effect-v1.hpp  ext-data-control-v1.cpp  ext-data-control-v1.hpp  ext-foreign-toplevel-list-v1.cpp  ext-foreign-toplevel-list-v1.hpp  ext-idle-notify-v1.cpp  ext-idle-notify-v1.hpp  ext-image-capture-source-v1.cpp  ext-image-capture-source-v1.hpp  ext-image-copy-capture-v1.cpp  ext-image-copy-capture-v1.hpp  ext-session-lock-v1.cpp  ext-session-lock-v1.hpp  ext-workspace-v1.cpp  ext-workspace-v1.hpp  fifo-v1.cpp  fifo-v1.hpp  fractional-scale-v1.cpp  fractional-scale-v1.hpp  (+94 more)
plasma/plasma-keyboard/: .contextProperties.ini  .flatpak-manifest.json  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml
plasma/plasma-keyboard/autotests/: CMakeLists.txt  mockinputmethodcompositor.cpp
plasma/plasma-keyboard/kcm/: kcm_plasmakeyboard.json  plasmakeyboardkcm.cpp  plasmakeyboardkcm.h
plasma/plasma-keyboard/kcm/ui/: main.qml  main_handset.qml  main_mediacenter.qml
plasma/plasma-keyboard/po/ar/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/bg/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/ca/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/ca@valencia/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/cs/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/de/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/es/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/eu/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/fi/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/fr/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/ga/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/he/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/hu/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/ia/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/is/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/it/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/ja/: kcm_plasmakeyboard.po
plasma/plasma-keyboard/po/ka/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/ko/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/lt/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/lv/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/nb/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/nl/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/nn/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/pl/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/pt_BR/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/ro/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/ru/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/sk/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/sl/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/sv/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/tr/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/ug/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/uk/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/zh_CN/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/po/zh_TW/: kcm_plasmakeyboard.po  plasma-keyboard.po
plasma/plasma-keyboard/src/: CMakeLists.txt  config-plasma-keyboard.h.cmake  inputlisteneritem.cpp  inputlisteneritem.h  inputmethod.cpp  inputmethod_p.h  inputpanelintegration.cpp  inputpanelintegration.h  inputpanelrole.h  inputpanelwindow.cpp  inputpanelwindow.h  inputplugin.cpp  inputplugin.h  layoutpathhelper.h  main.cpp  org.kde.plasma.keyboard.desktop  org.kde.plasma.keyboard.metainfo.xml  plasmakeyboardsettings.kcfg  qwaylandinputpanelsurface.cpp
plasma/plasma-keyboard/src/layouts/am_ET/: AmharicInputMethod.qml  dialpad.qml  digits.qml  handwriting.qml  main.qml  numbers.qml  symbols.qml
plasma/plasma-keyboard/src/layouts/eo/: main.qml
plasma/plasma-keyboard/src/layouts/et_EE/: main.qml
plasma/plasma-keyboard/src/layouts/fallback/: main.qml
plasma/plasma-keyboard/src/overlay/: candidatemodel.cpp  candidatemodel.h  diacritics.qrc  diacriticsdataloader.cpp  diacriticsdataloader.h  longpresstrigger.cpp  longpresstrigger.h  overlaycontroller.cpp  overlaycontroller.h  overlaytrigger.cpp  overlaytrigger.h  prefixquerytrigger.cpp  prefixquerytrigger.h  textexpansiontrigger.cpp  textexpansiontrigger.h
plasma/plasma-keyboard/src/overlay/diacritics/: base.json  cs_CZ.json  da_DK.json  de_DE.json  en_GB.json  es_ES.json  fi_FI.json  fr_FR.json  hr_HR.json  hu_HU.json  is_IS.json  it_IT.json  nb_NO.json  nl_NL.json  pl_PL.json  pt_BR.json  pt_PT.json  ro_RO.json  sk_SK.json  sl_SI.json  sv_SE.json  tr_TR.json
plasma/plasma-keyboard/src/qml/: OverlayWindow.qml
plasma/plasma-keyboard/src/styles/: CMakeLists.txt
plasma/plasma-mobile/initialstart/modules/: CMakeLists.txt
plasma/plasma-nano/: .kde-ci.yml  CMakeLists.txt
plasma/plasma-nano/po/nn/: plasma_shell_org.kde.plasma.nano.po
plasma/plasma-nano/po/sk/: plasma_shell_org.kde.plasma.nano.po
plasma/plasma-nano/shell/: metadata.json
wiki/: Building-Hyprland.md  Building-Plasma-Mobile.md  Building.md  Home.md  Launching.md  Running-with-Anland.md  Using-the-APT-Repo.md
(+88 files in other folders)
